syntax = "proto3";

package proto.v1;

import "proto/v1/account/query.proto";
import "proto/v1/account/add.proto";
import "proto/v1/account/remove.proto";
import "proto/v1/account/modify.proto";
import "proto/v1/auth/check.proto";

service AccountService {
  rpc AddAccount(AddAccountRequest) returns (AddAccountResponse) {}
  rpc RemoveAccount(RemoveAccountRequest) returns (RemoveAccountResponse) {}
  rpc QueryAccount(QueryAccountRequest) returns (QueryAccountResponse) {}
  rpc ModifyAccount(ModifyAccountRequest) returns (ModifyAccountResponse) {}
}
