syntax = "proto3";

package proto.v1;

enum LoginResult {
  LOGIN_RESULT_UNSPECIFIED = 0;
  LOGIN_RESULT_SUCCESS = 1;
  LOGIN_RESULT_FAILED = 2;
}

message LoginResponse {
  LoginResult result = 1;
  string token = 2;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}