syntax = "proto3";

package proto.v1;

import "proto/v1/friend/get.proto";
import "proto/v1/friend/send.proto";

service FriendService {
  rpc GetFriendList(FriendListRequest) returns (FriendListResponse) {}
  rpc Send(SendRequest) returns (SendResponse) {}
}
