syntax = "proto3";

package proto.v1;

import "proto/v1/auth/check.proto";

message Friend {
    int32 user_id = 1;
    int64 uid = 2;
    string nickname = 3;
    string remark = 4;
}

message FriendList {
    repeated Friend friends = 1;
    string account_tag = 2;
}

message FriendListResponse {
    CheckResult result = 1;
    repeated FriendList friend_list = 2;
}

message FriendListRequest {
  string token = 1;
}
