syntax = "proto3";

package proto.v1;

import "proto/v1/auth/check.proto";

enum MessageType {
  MESSAGE_TYPE_UNSPECIFIED = 0;
  MESSAGE_TYPE_TEXT = 1;
  MESSAGE_TYPE_IMAGE = 2;
  MESSAGE_TYPE_FACE = 3;
}

message Message {
    MessageType type = 1;
    bytes content = 2;
}

message FriendMessageResponse {
    CheckResult result = 1;
    int64 self_id = 2;
    int64 friend_id = 3;
    bool self_message = 4;
    int64 message_id = 5;
    uint32 timestamp = 6;
    bool read_mark = 7;
    bool hide = 8;
    bool revoke = 9;
    repeated Message messages = 10;
}
